# agentsocialbench

./: .gitignore  README.md  pyproject.toml
analysis/: analysis.ipynb
planning/: roadmap.md
scripts/: main.py
src/: action.py  actionmodel.py  env.py  event.py  experiment.py  state.py
tests/: test_env.py
